--- a/frontend/logare - Copy.html
+++ b/frontend/logare - Copy.html
@@ -60,7 +60,7 @@
                 </table>
 
 
-                <button type="submit" class="btn btn-primary btnAlign">Logare</button>
+                <button type="submit" class="btn btn-primary btnAlign1">Logare</button>
                 <button type="submit" class="btn btn-primary btnAlign">Inregistrare</button>
 
 
