creare functie logare

--- a/frontend/logare.html
+++ b/frontend/logare.html
@@ -59,8 +59,9 @@
                 </table>
 
 
-                <button type="submit" class="btn btn-primary btnAlign">Logare</button>
+                <button type="submit" class="btn btn-primary btnAlign" onclick = “myObject()”>Logare</button>
                 <button type="submit" class="btn btn-primary btnAlign">Inregistrare</button>
+		
 
 
 
