--- a/frontend/logare - Copy.html
+++ b/frontend/logare - Copy.html
@@ -11,15 +11,18 @@
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 	<link rel="stylesheet" href="css/animatie.css" type="text/css" media="all" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap" rel="stylesheet">
   <script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body class="noScroll">
   <div>
     <div id="container">
       <div id="banner"></div>
       <div class="menu">
-        <img src="images/logo.svg" height="100px" />
+        <img src="images/logo.svg" height="72px" />
         <div class="nameLogo">VoteBoat</div>
       </div><!-- End of Nav Div -->
 		<div class="header">
@@ -35,7 +38,7 @@
           </td>
 
           <div id="login" class="login">
-            <h1>.</h1>
+            <h1 class="titlu">LOGARE</h1>
 
             </tr>
             </table>
@@ -60,8 +63,8 @@
                 </table>
 
 
-                <button type="submit" class="btn btn-primary btnAlign">Logare</button>
-                <button type="submit" class="btn btn-primary btnAlign">Inregistrare</button>
+                <button type="submit" class="btn btn-primary btnAlignL">Logare</button>
+                <button type="submit" class="btn btn-primary btnAlignR">Inregistrare</button>
 
 
 
