--- a/frontend/logare.html
+++ b/frontend/logare.html
@@ -10,20 +10,24 @@
   <script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="css/animatie.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="css/animatie.css" type="text/css" media="all" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap" rel="stylesheet">
   <script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body class="noScroll">
   <div>
     <div id="container">
       <div id="banner"></div>
       <div class="menu">
-        <img src="images/logo.svg" height="100px" />
+        <img src="images/logo.svg" height="72px" />
         <div class="nameLogo">VoteBoat</div>
       </div><!-- End of Nav Div -->
+		<div class="header">
       <div id="continut1">
-        <div style="padding:210px 210px 210px 210px;">
+        <div style="padding:210px 210px 110px 210px;">
 
 
           <td style="padding-right:80px; padding-top:0px; padding-bottom:30px; ">
@@ -34,7 +38,7 @@
           </td>
 
           <div id="login" class="login">
-            <h1>.</h1>
+            <h1 class="titlu">LOGARE</h1>
 
             </tr>
             </table>
@@ -59,9 +63,8 @@
                 </table>
 
 
-                <button type="submit" class="btn btn-primary btnAlign" onclick = “myObject()”>Logare</button>
-                <button type="submit" class="btn btn-primary btnAlign">Inregistrare</button>
-		
+                <button type="submit" class="btn btn-primary btnAlignL">Logare</button>
+                <button type="submit" class="btn btn-primary btnAlignR">Inregistrare</button>
 
 
 
@@ -72,6 +75,51 @@
       </div>
     </div>
   </div>
+	 
+
+      <!--Waves Container-->
+      <div>
+        <svg
+          class="waves"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 24 150 28"
+          preserveAspectRatio="none"
+          shape-rendering="auto"
+        >
+          <defs>
+            <path
+              id="gentle-wave"
+              d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+            />
+          </defs>
+          <g class="parallax">
+            <use
+              xlink:href="#gentle-wave"
+              x="48"
+              y="0"
+              fill="rgba(255,255,255,0.7"
+            />
+            <use
+              xlink:href="#gentle-wave"
+              x="48"
+              y="3"
+              fill="rgba(255,255,255,0.5)"
+            />
+            <use
+              xlink:href="#gentle-wave"
+              x="48"
+              y="5"
+              fill="rgba(255,255,255,0.3)"
+            />
+            <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+          </g>
+        </svg>
+      </div>
+      <!--Waves end-->
+    </div>
+    <!--Header ends-->
+    <!-- partial -->
   <script type="text/javascript">
 //<!--
 //swfobject.registerObject("FLVPlayer");
