Am lucrat la pagina de rezultate: HTML si CSS (stiluri adaugate in style.css)

--- a/frontend/rezultate.html
+++ b/frontend/rezultate.html
@@ -28,9 +28,41 @@
                 <div class="nameLogo">VoteBoat</div>
             </div><!-- End of Nav Div -->
             <div class="header">
-                <div id="continut1">
 
+
+                <!-- Pagina de rezultate -->
+
+                <div id="continut1">
+                    <div id="continutRezultate">
+                        <h1>Rezultate</h1>
+                        <h3>Poll #0000: Alegeri pentru postul de manager</h3>
+                        <hr>
+                        <p>Acest vot a fost creat cu scopul de a alege cel mai favorabil candidat pentru postul de manager. Candidații sunt: Ion, Dan, Elena, Ana.</p>
+                        <h5>Diagramă</h5>
+                        <p>...</p>
+                        <h5>Detalii</h5>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                        <p>...</p>
+                    </div>
                 </div>
+
             </div>
         </div>
 
