--- a/frontend/inregistrare.html
+++ b/frontend/inregistrare.html
@@ -1,75 +1,100 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!-- <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css"> -->
-<link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css" />
-<!-- <script src="js/bootstrap.bundle.js"></script> -->
-<script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-<script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css"> -->
+  <link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css" />
+  <!-- <script src="js/bootstrap.bundle.js"></script> am fost pa aici-->
+  <script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="css/animatie.css" type="text/css" media="all" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap"
+    rel="stylesheet">
+  <script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
 </head>
-<body>
-<div align="center">
-<div id="container">
-<div id="banner"></div>
-		<div>
-			<ul id='menu' style="height: 45px;">
-			 
-			  
+
+<body class="noScroll">
+  <div>
+    <div id="container">
+      <div id="banner"></div>
+      <div class="menu">
+        <img src="images/logo.svg" height="72px" />
+        <div class="nameLogo">VoteBoat</div>
+      </div><!-- End of Nav Div -->
+      <div class="header">
+        <div id="continut1">
+          <div style="padding:210px 210px 110px 210px;">
+            <div id="continut2">
+              <div style="padding:0px 20px 20px 20px;">
 
 
-			</ul>
-		</div><!-- End of Nav Div -->	
-<div id="continut1">
-<div style="padding:210px 210px 210px 210px;">
+                <div id="login" class="register">
+
+                  <p class="titlu">ÎNREGISTRARE</p>
+
+                  <div class="DateLogin">
+                    <form style="width: 316.64px; height: 330.5px;">
+                      <div class="form-group">
+                        <label for="ad" class="forum">Adresă e-uvt</label>
+                        <input type="text" id="ad" class="form-control" name="firstname" placeholder="Adresă e-uvt">
+                      </div>
+
+                      <div class="form-group">
+                        <label for="nrm" class="forum">Număr matricol</label>
+                        <input type="text" id="nrm" class="form-control" name="lastname" placeholder="Număr matricol">
+                      </div>
+
+                      <div class="form-group">
+                        <label for="pass" class="forum">Text-cheie</label>
+                        <input type="password" id="pass" class="form-control" name="pss" placeholder="********">
+                      </div>
+
+                      <button type="submit" class="btn btn-primary btnAlignRConfirm">Înregistrare</button>
+                    </form>
 
 
-<td style="padding-right:80px; padding-top:0px; padding-bottom:30px; ">
-<div id="continut2">
-<div style="padding:0px 20px 20px 20px;">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--Waves Container-->
+        <div>
+          <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+              <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+            </defs>
+            <g class="parallax">
+              <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)" />
+              <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+              <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+              <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+            </g>
+          </svg>
+        </div>
+        <!--Waves end aici a fost Denis-->
 
 
-  </td>
-
-<div id="login" style="background-color: white;height: 320px;width: 400px;margin-top:-40px;border-radius: 5px;">
-<h1>Inregistrare,UVTeapa!</h1>
-
-</tr></table>
-<div class="DateLogin">
-  <form action="action_page.php">
-
-<label for="ad">Adresa e-uvt</label>
-    <input type="text" id="ad" name="firstname" placeholder="Adresa e-uvt">
-<br /><br />
-
-    <label for="nrm">Numar matricol</label>
-    <input type="text" id="nrm" name="lastname" placeholder="Numar matricol">
-<br /><br />
-
-
-    <label for="pass">Text-cheie</label>
-    <input type="password" id="pass" name="pss" placeholder="*******">
-<br /><br />
-
-    <button type="submit" class="btn btn-primary" style="height: 50px;width: 180px;">Inregistrare</button>
-
- 
-
-
-</div>
-
-</div>
-</div>
-</div>
-</div>
-</div>
-<script type="text/javascript">
-<!--
-swfobject.registerObject("FLVPlayer");
+      </div>
+    </div>
+  </div>
+  <!--Header ends-->
+  <!-- partial -->
+  <script type="text/javascript">
+//<!--
+//swfobject.registerObject("FLVPlayer");
 //-->
-</script>
+  </script>
 </body>
+
 </html>
