--- a/frontend/logare.html
+++ b/frontend/logare.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css"> -->
@@ -11,10 +11,12 @@
   <script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-	<link rel="stylesheet" href="css/animatie.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="css/animatie.css" type="text/css" media="all" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap"
+    rel="stylesheet">
   <script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
 </head>
 
@@ -29,66 +31,63 @@
       <div class="header">
         <div id="continut1">
           <div style="padding:210px 210px 110px 210px;">
+            <div id="continut2">
+              <div style="padding:0px 20px 20px 20px;">
 
 
-            <td style="padding-right:80px; padding-top:0px; padding-bottom:30px; ">
-              <div id="continut2">
-                <div style="padding:0px 20px 20px 20px;">
+                <div id="login" class="login">
+
+                  <p class="titlu">AUTENTIFICARE</p>
+
+                  <div class="DateLogin">
+                    <form style="width: 316.64px; height: 330.5px;">
+                      <div class="form-group">
+                        <label for="ad" class="forum">Adresă e-uvt</label>
+                        <input type="text" id="ad" class="form-control" name="firstname" placeholder="Adresă e-uvt">
+                      </div>
+
+                      <div class="form-group">
+                        <label for="nrm" class="forum">Număr matricol</label>
+                        <input type="text" id="nrm" class="form-control" name="lastname" placeholder="Număr matricol">
+                      </div>
+
+                      <div class="form-group">
+                        <label for="pass" class="forum">Text-cheie</label>
+                        <input type="password" id="pass" class="form-control" name="pss" placeholder="********">
+                      </div>
+
+                      <button type="submit" class="btn btn-primary btnAlignL">Autentificare</button>
+                      <button type="submit" class="btn btn-primary btnAlignR">Înregistrare</button>
+                    </form>
 
 
-            </td>
-
-            <div id="login" class="login">
-              <p class="titlu">AUTENTIFICARE</p>
-
-              </tr>
-              <div class="DateLogin">
-                <form>
-                  <div class="form-group">
-                    <label for="ad" class="forum">Adresă e-uvt</label>
-                    <input type="text" id="ad" class="form-control" name="firstname" placeholder="Adresă e-uvt">
                   </div>
-
-                  <div class="form-group">
-                    <label for="nrm" class="forum">Număr matricol</label>
-                    <input type="text" id="nrm" class="form-control" name="lastname" placeholder="Număr matricol">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="pass" class="forum">Text-cheie</label>
-                    <input type="password" id="pass" class="form-control" name="pss" placeholder="********">
-                  </div>
-
-                  <button type="submit" class="btn btn-primary btnAlignL">Autentificare</button>
-                  <button type="submit" class="btn btn-primary btnAlignR">Înregistrare</button>
-                </form>
-
-
+                </div>
               </div>
-
             </div>
           </div>
         </div>
+
+        <!--Waves Container-->
+        <div>
+          <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+              <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+            </defs>
+            <g class="parallax">
+              <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)" />
+              <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+              <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+              <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+            </g>
+          </svg>
+        </div>
+        <!--Waves end aici a fost Denis-->
+
+
       </div>
     </div>
-
-
-    <!--Waves Container-->
-    <div>
-      <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-        viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
-        <defs>
-          <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
-        </defs>
-        <g class="parallax">
-          <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)" />
-          <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
-          <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
-          <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
-        </g>
-      </svg>
-    </div>
-    <!--Waves end aici a fost Denis-->
   </div>
   <!--Header ends-->
   <!-- partial -->
