--- a/frontend/confirmare.html
+++ b/frontend/confirmare.html
@@ -5,9 +5,21 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<!-- <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css"> -->
+	<!--Favicon code-->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#0066cc">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="VoteBoat">
+    <meta name="application-name" content="VoteBoat">
+    <meta name="msapplication-TileColor" content="#0066cc">
+    <meta name="msapplication-config" content="images/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <!--Favicon code end-->
 	<link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css" />
-	<!-- <script src="js/bootstrap.bundle.js"></script> -->
+	<script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
 	<script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
@@ -17,7 +29,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap"
 		rel="stylesheet">
-	<script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
+	<title>VoteBoat</title>
 </head>
 
 <body class="noScroll">
@@ -64,11 +76,6 @@
 	</div>
 	<!--Header ends-->
 	<!-- partial -->
-	<script type="text/javascript">
-	//<!--
-	//swfobject.registerObject("FLVPlayer");
-	//-->
-	</script>
 </body>
 
 </html>
