--- a/frontend/confirmare.html
+++ b/frontend/confirmare.html
@@ -18,7 +18,7 @@
     <meta name="msapplication-config" content="images/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <!--Favicon code end-->
-	<link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
 	<script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
